--- a/package.json
+++ b/package.json
@@ -9,9 +9,19 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@lexical/history": "^0.39.0",
+    "@lexical/html": "^0.39.0",
+    "@lexical/link": "^0.39.0",
+    "@lexical/list": "^0.39.0",
+    "@lexical/react": "^0.39.0",
+    "@lexical/rich-text": "^0.39.0",
+    "@lexical/selection": "^0.39.0",
+    "date-fns": "^4.1.0",
+    "lexical": "^0.39.0",
     "next": "16.1.1",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -19,6 +29,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
+    "postcss": "^8.5.6",
     "typescript": "^5"
   }
 }
